feat: creates response entities for project role responses
