# tntconcept-rest/src/main/kotlin/com/autentia/tnt/api/binnacle/projectrole/ProjectRoleController.kt
@@ -1,4 +1,4 @@
-package com.autentia.tnt.api.binnacle
+package com.autentia.tnt.api.binnacle.projectrole
 
 import com.autentia.tnt.binnacle.entities.dto.ProjectRoleDTO
 import com.autentia.tnt.binnacle.entities.dto.ProjectRoleUserDTO
@@ -17,11 +17,11 @@ internal class ProjectRoleController(
 
     @Operation(summary = "Retrieves a project role by a given ID")
     @Get("/{id}")
-    fun getProjectRoleById(id: Long): ProjectRoleDTO =
-        projectRoleByIdUseCase.get(id)
+    fun getProjectRoleById(id: Long): ProjectRoleResponse =
+        ProjectRoleResponse.from(projectRoleByIdUseCase.get(id))
 
     @Operation(summary = "Retrieves recent used roles")
     @Get("/latest")
-    fun getLatestRoles(@QueryValue year: Int?): List<ProjectRoleUserDTO> =
-        latestProjectRolesForAuthenticatedUserUseCase.get(year)
+    fun getLatestRoles(@QueryValue year: Int?): List<ProjectRoleUserResponse> =
+        latestProjectRolesForAuthenticatedUserUseCase.get(year).map { ProjectRoleUserResponse.from(it) }
 }
